fix: fix pagination class rendering on mobile.
- Added 2rem bottom margin to the pagination class, same as content class margins
- Changed pagination class min height to 2rem for symmetry.

--- a/blog/static/styles.css
+++ b/blog/static/styles.css
@@ -110,7 +110,9 @@ li.revealed::before {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 10vh;
+    min-height: 2rem;
+    margin-top: 0;
+    margin-bottom: 2rem;
 }
 
 .pages-nav {
